--- a/BankBranch/src/main/resources/application.properties
+++ b/BankBranch/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 spring.config.import = optional:secret.properties
 yandex.api.key=${secret.yandex.api.key}
 graphhopper.api.key=${secret.graphhopper.api.key}
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/BB
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
